Integrated Dashboard changes

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
       <!-- Theme style -->
       <link rel="stylesheet" href="public/css/AdminLTE.min.css">
       <link rel="stylesheet" href="public/css/custom.css">
+      <link rel="stylesheet" href="public/css/_all-skins.min.css">
    </head>
    <body>
-      <div id = "app"></div>
+        <div class="skin-blue">
+            <div class="wrapper">
+                <div id = "app"></div>
+            </div>
+        </div>
       <script src = 'index_bundle.js'></script>
    </body>
 </html>
